@@ -74,13 +74,6 @@ TAO_Stub::TAO_Stub (const char *repository_id,
     this->orb_core_->client_factory ()->create_profile_lock ();
 
   this->base_profiles (profiles);
-  TAO_Profile *profile = 0;
-  for (CORBA::ULong i = 0; i < this->base_profiles_.profile_count (); ++i)
-    {
-      // Get the ith profile
-      profile = this->base_profiles_.get_profile (i);
-      profile->the_stub (this);
-    }
 }
 
 TAO_Stub::~TAO_Stub (void)
